feat: Set up modern monorepo with NPM workspaces

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -18,8 +18,5 @@
     "rootDir": "./src"
   },
   "include": ["src/**/*"],
-  "references": [
-    { "path": "../../packages/shared" },
-    { "path": "../../packages/config" }
-  ]
+  "references": [{ "path": "../../packages/shared" }, { "path": "../../packages/config" }]
 }
