--- a/biome.json
+++ b/biome.json
@@ -6,17 +6,7 @@
     "useIgnoreFile": true
   },
   "files": {
-    "ignoreUnknown": false,
-    "ignore": [
-      "node_modules",
-      "dist",
-      "build",
-      ".next",
-      "coverage",
-      "*.config.js",
-      "pnpm-lock.yaml",
-      "package-lock.json"
-    ]
+    "ignoreUnknown": false
   },
   "formatter": {
     "enabled": true,
